--- a/TTEv2.ipynb
+++ b/TTEv2.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "189d5d80",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "e717954e",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "f75c6c4a",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "c523f18f",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "795de2f6",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "ca3a2aa3",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "a364b21e",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
       "Link Function:                  Logit   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -625.72\n",
       "Date:                Sun, 09 Mar 2025   Deviance:                       1251.4\n",
-      "Time:                        16:09:37   Pearson chi2:                 7.48e+03\n",
+      "Time:                        19:39:17   Pearson chi2:                 7.48e+03\n",
       "No. Iterations:                     9   Pseudo R-squ. (CS):            0.02925\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "a30f9634",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
       "Link Function:                  Logit   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -625.72\n",
       "Date:                Sun, 09 Mar 2025   Deviance:                       1251.4\n",
-      "Time:                        16:09:40   Pearson chi2:                 7.48e+03\n",
+      "Time:                        19:39:20   Pearson chi2:                 7.48e+03\n",
       "No. Iterations:                     9   Pseudo R-squ. (CS):            0.02925\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "99443b31",
    "metadata": {},
    "outputs": [
@@ -698,7 +698,7 @@
       "Link Function:                  Logit   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -625.72\n",
       "Date:                Sun, 09 Mar 2025   Deviance:                       1251.4\n",
-      "Time:                        16:09:43   Pearson chi2:                 7.48e+03\n",
+      "Time:                        19:39:26   Pearson chi2:                 7.48e+03\n",
       "No. Iterations:                     9   Pseudo R-squ. (CS):            0.02925\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "ccb1e686",
    "metadata": {},
    "outputs": [
@@ -772,10 +772,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['id', 'period', 'treatment', 'x1', 'x2', 'x3', 'x4', 'age', 'age_s',\n",
-      "       'outcome', 'censored', 'eligible', 'trial_period', 'censor_weights',\n",
-      "       'weights', 'predicted_survival'],\n",
-      "      dtype='object')\n",
       "                 Generalized Linear Model Regression Results                  \n",
       "==============================================================================\n",
       "Dep. Variable:                outcome   No. Observations:                 9388\n",
@@ -784,7 +780,7 @@
       "Link Function:                  Logit   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -757.96\n",
       "Date:                Sun, 09 Mar 2025   Deviance:                       1515.9\n",
-      "Time:                        15:59:46   Pearson chi2:                 9.40e+03\n",
+      "Time:                        19:39:28   Pearson chi2:                 9.40e+03\n",
       "No. Iterations:                     7   Pseudo R-squ. (CS):           0.001516\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -797,10 +793,8 @@
     }
    ],
    "source": [
-    "\n",
     "import statsmodels.api as sm\n",
     "\n",
-    "print(expanded_data.columns)\n",
     "def fit_msm(data, formula, weights_col):\n",
     "    \"\"\"Fit a weighted regression model to estimate causal effects.\"\"\"\n",
     "    model = sm.GLM.from_formula(formula, data=data, freq_weights=data[weights_col], family=sm.families.Binomial())\n",
@@ -808,12 +802,12 @@
     "    print(results.summary())\n",
     "    return results\n",
     "\n",
-    "msm_results = fit_msm(expanded_data, 'outcome ~ treatment', 'censor_weights')\n"
+    "msm_results = fit_msm(expanded_data, 'outcome ~ treatment', 'censor_weights')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "bab9fd50",
    "metadata": {},
    "outputs": [
@@ -858,24 +852,37 @@
    "id": "a67a44ba",
    "metadata": {},
    "source": [
-    "The use of clustering in this analysis helps to identify underlying patterns and groupings within the dataset that may not be immediately apparent through traditional methods. By applying k-means clustering to the expanded dataset, we categorize observations into distinct clusters based on shared characteristics. This approach allows us to explore whether specific clusters exhibit different treatment effects, censoring patterns, or survival probabilities. Understanding these groupings can provide valuable insights into the heterogeneity of the population and inform more tailored analytical strategies.\n",
+    "## **Findings:**\n",
     "\n",
-    "Key Findings from Clustering Analysis:\n",
+    "**Trend Analysis:** The survival difference steadily decreases over time, and it’s a linear decline — which suggests that the treatment group continues to fare worse compared to the control group consistently as follow-up time increases. This negative trend might reflect a cumulative or progressive adverse effect of the treatment on survival, rather than a short-term impact.\n",
     "\n",
-    "Identification of Distinct Subgroups: The clustering analysis revealed the presence of well-defined subgroups within the dataset, with each cluster showing unique profiles of treatment and outcome variables.\n",
+    "**Confidence Intervals (CI):** The red dashed lines representing the 2.5% and 97.5% confidence intervals stay consistently below zero. This is important because it shows that the negative effect of treatment on survival is not only observed in the estimates but also statistically robust — there’s a very low probability that this negative effect happened by chance.\n",
+    "Additionally, the distance between the CIs and the survival difference line remains fairly uniform over time, suggesting the model’s predictions have consistent precision.\n",
     "\n",
-    "Variation in Censoring Patterns: Some clusters demonstrated higher rates of censoring compared to others, suggesting potential differences in follow-up consistency or eligibility.\n",
     "\n",
-    "Divergent Treatment Effects: Clusters responded differently to treatment, with certain groups showing a more pronounced association between treatment and outcome.\n",
+    "### **Regression Results:**\n",
     "\n",
-    "Survival Probability Differences: Aggregated survival probabilities varied across clusters, indicating that certain subgroups may have higher or lower chances of favorable outcomes over time.\n",
+    "**Treatment Effect:** The coefficient for the treatment variable (-0.6378) is statistically significant (p < 0.001), meaning there is strong evidence that the treatment is associated with lower survival. The confidence interval for this coefficient ([-0.977, -0.299]) reinforces this — both bounds are negative, ruling out any potential for a positive effect.\n",
+    "However, the relatively small size of the coefficient suggests that while the effect is significant, it’s not massive in magnitude.\n",
     "\n",
-    "Survival Difference Over Time: The analysis of survival differences over a follow-up period revealed a consistent decline in survival rates, represented by a steadily decreasing survival difference. The widening confidence intervals (2.5% and 97.5%) indicate increasing uncertainty in estimates as time progresses. This suggests that certain subgroups may experience greater variability in long-term survival outcomes.\n",
+    "**Baseline Survival Rate:** The intercept (-3.8570) reflects the baseline log-odds of survival in the absence of treatment. When converted to a probability, this is extremely low (exp(-3.857) ≈ 2%). This suggests that even without the treatment, survival outcomes were quite poor. The treatment exacerbating this poor survival rate makes it even more concerning.\n",
     "\n",
-    "Potential for Model Refinement: Incorporating cluster information into the marginal structural model (MSM) could improve the accuracy of estimated treatment effects by accounting for subgroup-specific variations.\n",
     "\n",
-    "These findings emphasize the importance of considering population heterogeneity in clinical trials and observational studies. Clustering provides a powerful tool for uncovering hidden structures within the data and enhancing the robustness of our analyses.\n",
-    "\n"
+    "### **Model Performance:**\n",
+    "**Intercept:** The negative intercept (-3.8570) reflects the baseline log-odds of survival for the reference group.\n",
+    "**Pseudo R²:** The value of 0.0015 indicates a very small proportion of variance explained, so the treatment effect exists but explains only a tiny part of the survival outcome.\n",
+    "\n",
+    "\n",
+    "### **Next Steps:**\n",
+    "**Further Analysis:** It would be useful to control for other covariates (like age, comorbidities, or baseline health) to see if the treatment effect remains after adjusting for these factors.\n",
+    "\n",
+    "**Interaction Effects:** We could explore whether the effect of treatment varies by subgroups — for example, younger vs. older patients or those with different baseline risk profiles.\n",
+    "\n",
+    "**Non-linearity:** This model assumes a linear effect of follow-up time on survival difference, but real-world data often exhibit non-linear trends. Fitting splines or time-varying coefficients might reveal more nuance.\n",
+    "\n",
+    "\n",
+    "### **Conclusion:**\n",
+    "The treatment is associated with a significantly lower survival rate over time, and this negative effect becomes more pronounced as the follow-up period increases. Despite statistical significance, the overall impact of the treatment on survival appears limited given the small effect size. Let me know if you’d like a deeper dive into any part of this analysis!"
    ]
   }
  ],
